--- a/squelettes/1col.tpl.html
+++ b/squelettes/1col.tpl.html
@@ -43,11 +43,12 @@
     </header><!-- /#yw-header -->
 
     <div id="yw-main" role="main" {{doubleclic}}>
-      <div class="container">
+      <div class="yw-main-content alone">
         {WIKINI_PAGE}
-        {{barreredaction}}
       </div> <!-- /.container -->
     </div><!-- /#yw-main -->
+
+    {{barreredaction}}
 
     <footer id="yw-footer">
       <div class="container">
