--- a/squelettes/2cols-right.tpl.html
+++ b/squelettes/2cols-right.tpl.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width" />
 
   <!-- Title of the page -->
-  <title>{{configuration param="wakka_name"}} : {{currentpage}}</title>
+  <title>{{configuration param="wakka_name"}} : {{titrepage}}</title>
 
   <!-- Favicons -->
   <link rel="shortcut icon" type="image/x-icon" href="{{configuration param="theme_path"}}images/favicon.ico" />
