--- a/squelettes/1col.tpl.html
+++ b/squelettes/1col.tpl.html
@@ -24,7 +24,9 @@
 </head>
 
 <body {{parambody}}>
+  
   <div id="yw-container">
+    
     <nav id="yw-topnav" class="navbar navbar-default fixable" role="navigation">
       <div class="container">
           <button class="btn btn-default btn-menu"><span class="fa fa-bars"></span></button>
@@ -32,21 +34,26 @@
             <a class="navbar-brand" href="{{configuration param="base_url"}}{{configuration param="root_page"}}">
               {{include page="PageTitre" doubleclic="1"}}
             </a>
-          </div> <!-- /.navbar-header -->
+          </div>
           {{include page="PageMenuHaut" class="yw-topnav topnavpage links-container" doubleclic="1" actif="1"}}
           {{include page="PageRapideHaut" class="yw-topnav-fast-access pull-right" doubleclic="1" actif="1"}}
-        </div> <!-- /.container -->
-    </nav><!-- /#yw-topnav -->
+        </div>
+    </nav>
 
     <header id="yw-header">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="{{configuration param="base_url"}}{{configuration param="root_page"}}">
+          {{include page="PageTitre" doubleclic="1"}}
+        </a>
+      </div>
       {{include page="PageHeader" class="yw-headerpage" doubleclic="1"}}
-    </header><!-- /#yw-header -->
-
+    </header>
+    
     <div id="yw-main" role="main" {{doubleclic}}>
       <div class="yw-main-content alone">
         {WIKINI_PAGE}
-      </div> <!-- /.container -->
-    </div><!-- /#yw-main -->
+      </div> 
+    </div>
 
     {{barreredaction}}
 
