margot-fun && vertical-menu: responsiveness

--- a/squelettes/1col.vertical-menu.tpl.html
+++ b/squelettes/1col.vertical-menu.tpl.html
@@ -47,7 +47,9 @@
             {{include page="PageTitre" doubleclic="1"}}
           </a>
           <div id="yw-topnav" class="in-header">
+            <button class="btn btn-default btn-menu"><span class="fa fa-bars"></span></button>
             {{include page="PageRapideHaut" class="yw-topnav-fast-access" doubleclic="1" actif="1"}}
+            {{include page="PageMenuHaut" class="yw-topnav topnavpage links-container" doubleclic="1" actif="1"}}
           </div>
         </div>
         {{include page="PageHeader" class="yw-headerpage" doubleclic="1"}}
