--- a/squelettes/2cols-right.tpl.html
+++ b/squelettes/2cols-right.tpl.html
@@ -14,9 +14,7 @@
   <!-- Title of the page -->
   <title>{{configuration param="wakka_name"}} : {{titrepage}}</title>
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" href="{{configuration param="theme_path"}}images/favicon.png" />
-
+  {{favicon}}
   {{linkstyle}}
   {{linkrss}}
 </head>
