fix(a11y): add fast access link

--- a/squelettes/1col.vertical-menu.tpl.html
+++ b/squelettes/1col.vertical-menu.tpl.html
@@ -22,6 +22,10 @@
 <body {{parambody}}>
   
   <div class="yeswiki-vertical-menu">
+
+    <a id="yw-a11y-jump-content" class="sr-only sr-only-focusable btn btn-default" href="#yw-main">
+      Aller au contenu principal
+    </a>
     
     <nav id="yw-topnav" class="navbar navbar-default fixable" role="navigation">
       <div class="container">
