--- a/squelettes/2cols-right.tpl.html
+++ b/squelettes/2cols-right.tpl.html
@@ -21,6 +21,11 @@
 
 <body {{parambody}}>
   <div id="yw-container">
+
+    <a id="yw-a11y-jump-content" class="sr-only sr-only-focusable btn btn-default" href="#yw-main">
+      Aller au contenu principal
+    </a>
+
     <nav id="yw-topnav" class="navbar navbar-default fixable" role="navigation">
       <div class="container">
           <button class="btn btn-default btn-menu"><span class="fa fa-bars"></span></button>
